// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Em checkGrammar 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkGrammar 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkGrammar 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkGrammar 4`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkHighlight 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkHighlight 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkHighlight 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkHighlight 4`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkSpaces 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkSpaces 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkSpaces 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkSpaces 4`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em className 1`] = `
<em
  className="uu5-bricks-em my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em content 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</em>
`;

exports[`UU5.Bricks.Em content 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</em>
`;

exports[`UU5.Bricks.Em content 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</em>
`;

exports[`UU5.Bricks.Em content 4`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</em>
`;

exports[`UU5.Bricks.Em controlled 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em controlled 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em controlled 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em controlled 4`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em default props 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em disabled 1`] = `
<em
  className="uu5-bricks-em uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</em>
`;

exports[`UU5.Bricks.Em disabled 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em disabled 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em disabled 4`] = `
<em
  className="uu5-bricks-em uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</em>
`;

exports[`UU5.Bricks.Em docKit examples UU5.Bricks.Em should render without crash 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="emphasised"
  />
</em>
`;

exports[`UU5.Bricks.Em dynamic 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em dynamic 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em dynamic 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em dynamic 4`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em hidden 1`] = `
<em
  className="uu5-bricks-em uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em hidden 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em hidden 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em hidden 4`] = `
<em
  className="uu5-bricks-em uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em id 1`] = `
<em
  className="uu5-bricks-em"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em ignoreHTML 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em ignoreHTML 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em ignoreHTML 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em ignoreHTML 4`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em mainAttrs 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em name 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em noIndex 1`] = `
<em
  className="uu5-bricks-em uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em noIndex 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em noIndex 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em noIndex 4`] = `
<em
  className="uu5-bricks-em uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em selected 1`] = `
<em
  className="uu5-bricks-em uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em selected 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em selected 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em selected 4`] = `
<em
  className="uu5-bricks-em uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em style 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Em style 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Em style 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Em style 4`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Em textCorrector 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em textCorrector 2`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em textCorrector 3`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em textCorrector 4`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em tooltip 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
